--- a/templates/rl.html
+++ b/templates/rl.html
@@ -15,45 +15,34 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="bgH1">
- 
   <!-------------------------------------- NAVBAR -------------------------------------->
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <div class="container-fluid">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Menu
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#">Casos ML</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/casoUno">Primer Caso</a></li>
-                  <li><a class="dropdown-item" href="/casoDos">Segundo Caso</a></li>
-                  <li><a class="dropdown-item" href="/casoTres">Tercer Caso</a></li>
-                  <li><a class="dropdown-item" href="/casoCuatro">Cuarto Caso</a></li>
-                </ul>
-              </li>
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark"> 
+    <div class="container-fluid"> 
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> 
+        <span class="navbar-toggler-icon"></span> 
+      </button> 
+      <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
+          <li class="nav-item"> 
+            <a class="nav-link active" aria-current="page" href="/">Home</a> 
+          </li> 
+          <li class="nav-item dropdown"> 
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+              Menu 
+            </a> 
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown"> 
+              <!-- Submenú Casos ML -->
+              <li class="dropdown-submenu"> 
+                <a class="dropdown-item dropdown-toggle" href="#">Casos ML</a> 
+                <ul class="dropdown-menu"> 
+                  <li><a class="dropdown-item" href="/casoUno">Primer Caso</a></li> 
+                  <li><a class="dropdown-item" href="/casoDos">Segundo Caso</a></li> 
+                  <li><a class="dropdown-item" href="/casoTres">Tercer Caso</a></li> 
+                  <li><a class="dropdown-item" href="/casoCuatro">Cuarto Caso</a></li> 
+                </ul> 
+              </li> 
+
               <!-- Submenú Regresión Lineal -->
               <li class="dropdown-submenu">
                 <a class="dropdown-item dropdown-toggle" href="#">Regresión Lineal</a>
@@ -62,12 +51,20 @@
                   <li><a class="dropdown-item" href="/LR">Ejercicio práctico</a></li>
                 </ul>
               </li>
-            </ul>
-          </li>
-        </ul>
+                <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#">Regresion Logistica</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/LogisConceptos">Conceptos básicos</a></li>
+                  <li><a class="dropdown-item" href="/Lc">Ejercicio práctico</a></li>
+                </ul>
+              </li>
+            </ul> 
+          </li> 
+        </ul> 
       </div>
     </div>
-  </nav>
+  </nav> 
+  
   <div class="container my-5">
     <h1 class="text-center">Regresión Lineal</h1>
     <div class="accordion my-4" id="accordionExample">
