--- a/templates/logisconceptos.html
+++ b/templates/logisconceptos.html
@@ -14,9 +14,52 @@
 <body class="bgH1">
 
   <!-------------------------------------- NAVBAR -------------------------------------->
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+ <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Inicio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Menu
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <!-- Submenú Casos ML -->
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#">Casos ML</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/casoUno">Primer Caso</a></li>
+                  <li><a class="dropdown-item" href="/casoDos">Segundo Caso</a></li>
+                  <li><a class="dropdown-item" href="/casoTres">Tercer Caso</a></li>
+                  <li><a class="dropdown-item" href="/casoCuatro">Cuarto Caso</a></li>
+                </ul>
+              </li>
+ 
+              <!-- Submenú Regresión Lineal -->
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#">Regresión Lineal</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/regresionConceptos">Conceptos básicos</a></li>
+                  <li><a class="dropdown-item" href="/LR">Ejercicio práctico</a></li>
+                </ul>
+              </li>
+                <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#">Regresion Logistica</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/LogisConceptos">Conceptos básicos</a></li>
+                  <li><a class="dropdown-item" href="/Lc">Ejercicio práctico</a></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
@@ -88,7 +131,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
+ <style>
+    
+    h1, h2, h3, h4, h5 { color: #fdfbfb; }
     body::before {
       content: "";
       position: fixed;
@@ -97,11 +142,23 @@
       background: rgba(20, 20, 20, 0.7);
       z-index: -1;
     }
-    .navbar { background-color: black; }
-    .card { border-radius: 15px; }
-    h2, h3, h4 { color: #f8f9fa; }
-    p, li, pre { font-size: 1.1rem; }
-    pre { color: #fff; }
+    .navbar { background-color: rgb(7, 7, 7); }
+    .card { background-color: #212529; color: #faf8f8; }
+    .accordion-button { font-weight: bold; }
+    .dropdown-submenu {
+  position: relative;
+}
+ 
+.dropdown-submenu > .dropdown-menu {
+  display: none;
+  top: 0;
+  left: 100%;
+  margin-top: 3px;
+}
+ 
+.dropdown-submenu:hover > .dropdown-menu {
+  display: block;
+}
   </style>
 </body>
 </html>
